--- a/FinalProject/src/WebApi/wwwroot/email_templates/email_confirmation.html
+++ b/FinalProject/src/WebApi/wwwroot/email_templates/email_confirmation.html
@@ -404,7 +404,7 @@
                         <table role="presentation" border="0" cellpadding="0" cellspacing="0">
                             <tr>
                                 <td class="content-block">
-                                    <span class="apple-link">Upstorage Inc, Silicon Valley China Number 1, San Francisco CA 94102</span>
+                                    <span class="apple-link">HanSaye Inc, Silicon Valley China Number 1, San Francisco CA 94102</span>
                                     <br> Don't like these emails? <a href="https://www.youtube.com/watch?v=X2WH8mHJnhM">Unsubscribe</a>.
                                 </td>
                             </tr>
